# Static-Analysis-2022-Spring

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  Readme.md  gitAll.sh  shell.sh  templateshell.sh  undefinedvariable_FDT_shell.sh  undefinedvariable_class_shell.sh  undefinedvariable_cpython_one_shell.sh  undefinedvariable_cpython_shell.sh  undefinedvariable_general_shell.sh  undefinedvariable_interprocedure_shell.sh  undefinedvariable_struct_shell.sh  undefinedvariableshell.sh
include/checkers/: MainChecker.h  MemoryLeakChecker.h  TemplateChecker.h  UndefinedVariableChecker.h
include/framework/: ASTManager.h  CallGraph.h  ControlFlowGraph.h  Logger.h  ProgramDependencyGraph.h
lib/checkers/: MainChecker.cpp  MemoryLeakChecker.cpp  TemplateChecker.cpp  UndefinedVariableChecker.cpp
lib/framework/: ASTManager.cpp  CallGraph.cpp  Common.cpp  Config.cpp  ControlFlowGraph.cpp  Logger.cpp  ProgramDependencyGraph.cpp
staticApp/: main.py  main.spec  main.ui  requirements.txt  resources.qrc
staticApp/css/: errorText.html
staticApp/default/: default.c  default.txt
staticApp/models/: ConvNet.py  LeNet.py  SqueezeNet.py  __init__.py  analyse_model.py  model2dot.py
staticApp/modules/: __init__.py  app_functions.py  app_settings.py  parseASTwithJoern.py  parseModelCode.py  resources_rc.py  ui_functions.py  ui_main.py
staticApp/themes/: nju_birds_green.qss
staticApp/tmpFile/: tmpFileForDot.dot  tmpJson.json  tmp_code.cpp
tests/MainChecker/: astList.txt  config.txt  (+7 more)
tools/: CMakeLists.txt
tools/UndefinedVariableChecker/: CMakeLists.txt  main.cpp
(+84 files in other folders)
